--- a/Layouts_AppBasharov/Layouts_AppBasharov/Layouts_AppBasharov.csproj
+++ b/Layouts_AppBasharov/Layouts_AppBasharov/Layouts_AppBasharov.csproj
@@ -16,6 +16,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="NewPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="StackPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
