Новая страница RGB. Добавление Slider

--- a/Layouts_AppBasharov/Layouts_AppBasharov/Layouts_AppBasharov.csproj
+++ b/Layouts_AppBasharov/Layouts_AppBasharov/Layouts_AppBasharov.csproj
@@ -19,6 +19,9 @@
     <EmbeddedResource Update="NewPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="RGB.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="StackPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
